--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -13,7 +13,23 @@
     <div id="main-container" class="container">
 
         <header class="row">
-            <h1>SST Archive</h1>
+            <div class="row">
+                <h1 class="col-md-8">SST Archive</h1>
+
+                {% if user.is_authenticated %}
+                <div class="col-md-4 text-right">
+                    <p class="text-right">Logged in as <i>{{ user.email }}</i></p>
+                    <a href="{% url 'logout' %}">Log out</a>
+                </div>
+                {% else %}
+                <div class="col-md-4 text-right">
+                    <a href="{% url 'login' %}?next={{ request.get_full_path|urlencode }}">Log in</a>
+                    <a href="{% url 'register' %}">Register</a>
+                </div>
+                {% endif %}
+
+
+            </div>
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
