--- a/frontend/templates/frontend/selection_sidebar.html
+++ b/frontend/templates/frontend/selection_sidebar.html
@@ -1,6 +1,6 @@
 {% load selection_tags %}
 
-<div class="selection-sidebar row mt-5">
+<div class="selection-sidebar row mb-5">
     <h4>Selection</h4>
 
     {% if selection_list %}
