--- a/frontend/templates/frontend/metadata_detail.html
+++ b/frontend/templates/frontend/metadata_detail.html
@@ -10,12 +10,11 @@
 
     <h2>Observation {{ metadata.oid }}</h2>
 
-    <div class="container ">
+    <div class="mb-5 col-12">
         <div class="card">
             <div class="card-body row">
-                <p class="col-2">File: {{ metadata.data_location.file_name }}</p>
                 <p class="col-2">File size: {{ metadata.data_location.file_size|filesizeformat }}</p>
-                <a class="card-link col-5" href="{% url 'download_data_cube' dataset.name metadata.oid %}">
+                <a class="card-link col-6" href="{% url 'download_data_cube' dataset.name metadata.oid %}">
                     <button class="btn btn-primary"><i class="bi bi-download"></i> Download FITS data cube</button>
                 </a>
             </div>
