--- a/frontend/templates/frontend/search_sidebar.html
+++ b/frontend/templates/frontend/search_sidebar.html
@@ -1,4 +1,4 @@
-<div class="search-sidebar row mt-3">
+<div class="search-sidebar row mb-5">
     <h4>Search</h4>
     <form action="{% url 'search' %}" method="GET">
 
