Tweak display of search results

--- a/frontend/templates/frontend/search_results.html
+++ b/frontend/templates/frontend/search_results.html
@@ -36,8 +36,8 @@
         </tr>
     {% endfor %}
 {% else %}
-    <tr colspan="100%">
-        <td>Search yielded no results.</td>
+    <tr>
+        <td colspan="6">Search yielded no results.</td>
     </tr>
 {% endif %}
         </tbody>
