--- a/frontend/templates/frontend/account_login.html
+++ b/frontend/templates/frontend/account_login.html
@@ -8,6 +8,13 @@
 
     <h2>Login</h2>
 
+
+    {% if request.GET.login_reason %}
+    <div class="alert alert-primary">
+        {{ request.GET.login_reason }}
+    </div>
+    {% endif %}
+
     {% if form.errors %}
     <div class="alert alert-danger">
         Your username and password didn't match. Please try again.
