--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -6,20 +6,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <!-- <link rel="stylesheet" href="{% static 'frontend/style.css' %}"> -->
-    <title>{% block title %}SST Archive{% endblock %}</title>
+    <title>{% block title %}SST Archive Prototype{% endblock %}</title>
 </head>
 
 <body>
     <div id="main-container" class="container">
 
-        <header class="row">
+        <header class="row mb-5">
             <div class="row">
                 <h1 class="col-8 mt-3">SST Archive</h1>
 
                 {% if user.is_authenticated %}
                 <div class="col-4 text-right">
-                    <small>Logged in as <i>{{ user.email }}</i>
+                    <small>
+                        Logged in as <i>{{ user.email }}</i>
                         <a href="{% url 'logout' %}">Log out</a>
+                        {% if user.is_staff %}
+                        <p><a href="{% url 'admin:index' %}">Admin</a></p>
+                        {% endif %}
                     </small>
                 </div>
                 {% else %}
@@ -32,6 +36,7 @@
                 {% endif %}
             </div>
 
+            <!--
             <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
@@ -44,17 +49,18 @@
                 </ul>
               </div>
             </nav>
+            -->
         </header>
 
         <div class="row">
-            <div id="sidebar" class="col-lg-3">
+            <div id="sidebar" class="col-3">
                 {% block sidebar %}
                 {% include "frontend/search_sidebar.html" %}
                 {% include "frontend/selection_sidebar.html" %}
                 {% endblock %}
             </div>
 
-            <div id="content"  class="col-lg-9">
+            <div id="content"  class="col-9">
                 {% block content %}{% endblock %}
             </div>
         </div>
