Make some tweaks to presentation

--- a/frontend/templates/frontend/search_results.html
+++ b/frontend/templates/frontend/search_results.html
@@ -13,7 +13,7 @@
         <tr>
             <th scope="col" style="width: 5em">Select</th>
             <th scope="col" style="">Preview</th>
-            <th scope="col" style="width: 10em">Dataset</th>
+            <th scope="col" style="width: 10em">Instrument</th>
             <th scope="col">Observation Date (Began)</th>
             <th scope="col" style="width: 7em">Data Size</th>
             <th scope="col" style="width: 5em">Download</th>
