--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -14,7 +14,7 @@
 
         <header class="row mb-5">
             <div class="row">
-                <h1 class="col-8 mt-3">SST Archive</h1>
+                <h1 class="col-8 mt-3"><a style="color: #000000; text-decoration: none" href="{% url 'search' %}">SST Archive Prototype</a></h1>
 
                 {% if user.is_authenticated %}
                 <div class="col-4 text-right">
@@ -35,21 +35,6 @@
                 </div>
                 {% endif %}
             </div>
-
-            <!--
-            <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'dataset_list' %}">Datasets</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#"></a>
-                  </li>
-                </ul>
-              </div>
-            </nav>
-            -->
         </header>
 
         <div class="row">
