--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -45,7 +45,7 @@
                 {% endblock %}
             </div>
 
-            <div id="content"  class="col-9">
+            <div id="content"  class="col-9 ml-5">
                 {% block content %}{% endblock %}
             </div>
         </div>
