--- a/frontend/templates/frontend/metadata_detail.html
+++ b/frontend/templates/frontend/metadata_detail.html
@@ -47,7 +47,7 @@
         {% for key, value in metadata_fields.items %}
         <tr>
             <th scope="row">{{ key }}</th>
-            <td style="overflow: auto">{{ value }}</td>
+            <td class="overflow-auto">{{ value }}</td>
         </tr>
         {% endfor %}
         </tbody>
