--- a/frontend/templates/frontend/search_results.html
+++ b/frontend/templates/frontend/search_results.html
@@ -6,7 +6,7 @@
 {% block title %}SST Archive - Datasets{% endblock %}
 
 {% block content %}
-    <h2>Search results</h2>
+    <h2>Showing {{ paginator.count }} search results</h2>
 
     <table class="table" style="table-layout: fixed">
         <thead class=".thead-light">
