--- a/frontend/templates/frontend/selection_sidebar.html
+++ b/frontend/templates/frontend/selection_sidebar.html
@@ -5,7 +5,7 @@
 
     {% if selection_list %}
 
-    <table class="table row" style="table-layout: fixed; overflow: hidden">
+    <table class="table row overflow-hidden" style="table-layout: fixed">
     {% for selection in selection_list %}
         <tr>
             <td>{% show_selection_control selection.dataset selection.oid True %}</td>
