--- a/frontend/templates/frontend/selection_control.html
+++ b/frontend/templates/frontend/selection_control.html
@@ -1,4 +1,4 @@
-<a href="{% url 'toggle_metadata_selection' dataset oid %}">
+<a href="{% url 'toggle_file_selection' filename %}">
     <button class="btn btn-sm {% if selected %}btn-warning{% else %}btn-light{% endif %}" type="submit">
         {% if selected %}
         <i class="bi bi-dash-lg"></i>
