Combine metadata into a single model class
This makes searching much simpler, resulting
in fewer queries. There's also a substantial
overlap in the columns present in the CRISP
and the CHROMIS metadata classes.

--- a/frontend/templates/frontend/file_detail.html
+++ b/frontend/templates/frontend/file_detail.html
@@ -45,10 +45,12 @@
         </thead>
         <tbody>
         {% for key, value in metadata_fields.items %}
+        {% if value is not None %}
         <tr>
             <th scope="row">{{ key }}</th>
             <td class="overflow-auto">{{ value }}</td>
         </tr>
+        {% endif %}
         {% endfor %}
         </tbody>
     </table>
