--- a/frontend/templates/frontend/search_results.html
+++ b/frontend/templates/frontend/search_results.html
@@ -15,11 +15,11 @@
             <th scope="col" style="width: 12em">Preview</th>
             <th scope="col" style="width: 7em">Instrument</th>
             <th scope="col" style="width: 12em">Observation Date (Began)</th>
+            {% for column_name in additional_column_names %}
+                <th scope="col" class="text-center" style="width: 4em">{{ column_name }}</th>
+            {% endfor %}
             <th scope="col" style="width: 6em">Data Size</th>
             <th scope="col" style="width: 5em">Download</th>
-            {% for column_name in additional_column_names %}
-                <th scope="col" style="width: 4em">{{ column_name }}</th>
-            {% endfor %}
         </tr>
         </thead>
         <tbody>
@@ -40,11 +40,11 @@
             </td>
             <td scope="row">{{ metadata.instrument }}</td>
             <td scope="row">{{ metadata.date }}</td>
+            {% for value in metadata.additional_values %}
+            <td scope="row" class="text-center">{{ value }}</td>
+            {% endfor %}
             <td scope="row" class="text-center">{{ metadata.file_size|filesizeformat }}</td>
             <td scope="row" class="text-center"><a class="download-symbol bi bi-download" href="{% url 'download_data_cube' metadata.filename %}"></a></td>
-            {% for value in metadata.additional_values %}
-            <td scope="row">{{ value }}</td>
-            {% endfor %}
         </tr>
     {% endfor %}
 {% else %}
