--- a/frontend/templates/frontend/widgets/dropdown_checkbox_select.html
+++ b/frontend/templates/frontend/widgets/dropdown_checkbox_select.html
@@ -1,7 +1,7 @@
 {% with id=widget.attrs.id %}
 <div class="dropdown">
   <button type="button" class=" dropdown-toggle form-control" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-    Select Spectral Lines
+    Select {{full_field_name}}
   </button>
 
   <div {% if id %}id="{{ id }}"{% endif %} class="{% if widget.attrs.class %}{{ widget.attrs.class }}{% endif %} dropdown-menu" aria-labelledby="dropdownMenuButton">
