Change name to Stockholm SST Archive for now
Also clean up templates a bit

--- a/frontend/templates/frontend/file_detail.html
+++ b/frontend/templates/frontend/file_detail.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}SST Archive - {{ metadata.oid }}{% endblock %}
+{% block title %}- {{ metadata.oid }}{% endblock %}
 
 {% block content %}
 
