--- a/frontend/templates/frontend/search_results.html
+++ b/frontend/templates/frontend/search_results.html
@@ -4,7 +4,7 @@
 {% load pagination_controls %}
 {% load static %}
 
-{% block title %}SST Archive - Datasets{% endblock %}
+{% block title %}- Datasets{% endblock %}
 
 {% block content %}
     <h2>Showing {{ paginator.count }} search results</h2>
