--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -5,15 +5,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <!-- <link rel="stylesheet" href="{% static 'frontend/style.css' %}"> -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-            crossorigin="anonymous"></script>
-
-    <title>{% block title %}SST Archive Prototype{% endblock %}</title>
+    <title>Stockholm SST Archive Prototype {% block title %}{% endblock %}</title>
 </head>
 
 <body>
@@ -21,7 +16,7 @@
 
     <header class="row mb-5">
         <div class="row">
-            <h1 class="col-8 mt-3"><a style="color: #000000; text-decoration: none" href="{% url 'search' %}">SST
+            <h1 class="col-8 mt-3"><a style="color: #000000; text-decoration: none" href="{% url 'search' %}">Stockholm SST
                 Archive Prototype</a></h1>
 
             {% if user.is_authenticated %}
@@ -58,11 +53,11 @@
     </div>
 </div>
 
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
-<script lang="javascript">
-
-</script>
 </body>
 </html>
