--- a/data_access/templates/data_access/token_prompt.html
+++ b/data_access/templates/data_access/token_prompt.html
@@ -10,7 +10,7 @@
 <p>{{ release_comment }}</p>
 {% endif %}
 
-<p>A valid access token is required to access this observation data cube <i>{{ data_location.file_name }}</i>.</p>
+<p>A valid access token is required to access this observation data cube <i>{{ data_cube.filename }}</i>.</p>
 
 <form method="POST" action="{{ request.path }}">
     {% csrf_token %}
