Fix close behavior of dropdown boxes in search form

--- a/frontend/templates/frontend/widgets/dropdown_checkbox_select.html
+++ b/frontend/templates/frontend/widgets/dropdown_checkbox_select.html
@@ -1,6 +1,6 @@
 {% with id=widget.attrs.id %}
 <div class="dropdown">
-  <button type="button" class=" dropdown-toggle form-control" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+  <button type="button" class=" dropdown-toggle form-control" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
     Select {{full_field_name}}
   </button>
 
