Remove oid from Metadata, use the one from DataCube instead

--- a/frontend/templates/frontend/data_cube_detail.html
+++ b/frontend/templates/frontend/data_cube_detail.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}- {{ metadata.oid }}{% endblock %}
+{% block title %}- {{ data_cube.oid }}{% endblock %}
 
 {% block content %}
 
