--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -41,13 +41,13 @@
     </header>
 
     <div class="row">
-        <div id="sidebar" class="col-3">
+        <div id="sidebar" class="col-3 bg-light p-3">
             {% block sidebar %}
             {% include "frontend/search_sidebar.html" %}
             {% endblock %}
         </div>
 
-        <div id="content" class="col-9 ml-5">
+        <div id="content" class="col-9 ml-5 offset-0">
             {% block content %}{% endblock %}
         </div>
     </div>
