--- a/frontend/templates/frontend/data_cube_detail.html
+++ b/frontend/templates/frontend/data_cube_detail.html
@@ -11,30 +11,82 @@
     {% if metadata %}
 
     <div class="row">
-        <h3>Preview of {{ data_cube.filename }}</h3>
-        <div class="mb-5 col-8">
+        <h3>Observation Details</h3>
+
+        <div>
+            Features:
+            {% for tag in data_cube.tags.all %}
+            <span class="badge bg-info">{{ tag }}</span>
+            {% endfor %}
+        </div>
+
+        <div class="mb-5 col-6" style="position: relative; overflow: hidden">
+            <figure class="figure">
             {% if data_cube.animated_preview %}
-            <img src="{% static data_cube.animated_preview.animated_gif %}" />
+            <img src="{% static data_cube.animated_preview.animated_gif %}" style="position: absolute; margin: auto; top: -9999px; bottom: -9999px; left: -9999px; right: -9999px;" />
             {% elif data_cube.thumbnail %}
-            <img src="{% static data_cube.thumbnail.image_url %}" />
+            <img src="{% static data_cube.thumbnail.image_url %}" style="position: absolute; margin: auto; top: -9999px; bottom: -9999px; left: -9999px; right: -9999px;" />
             {% endif %}
+            </figure>
+        </div>
+
+        <div class="mb-5 col-6 ">
+            <table class="table" style="table-layout: fixed">
+                <tr>
+                    <td>Observation began:</td>
+                    <td>{{ metadata.date_beg }}</td>
+                </tr>
+
+                <tr>
+                    <td>Observation ended:</td>
+                    <td>{{ metadata.date_end }}</td>
+                </tr>
+
+                <tr>
+                    <td>Instrument:</td>
+                    <td>{{ data_cube.instrument.name }}</td>
+                </tr>
+                <tr>
+                    <td>Spectral Line:</td>
+                    <td>{{ metadata.filter1 }} Å ({{ metadata.waveband }})</td>
+                </tr>
+
+                <tr>
+                    <td>File name:</td>
+                    <td>{{ data_cube.filename }}</td>
+                </tr>
+
+                <tr>
+                    <td>Download:</td>
+                    <td>
+                    <a class="btn btn-primary" href="{% url 'download_data_cube' data_cube.filename %}"><i class="bi bi-download"></i> Download FITS data cube</a>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>File size:</td>
+                    <td><span class="text-center">{{ data_cube.size|filesizeformat }}</span></td>
+                </tr>
+            </table>
         </div>
 
         <div class="mt-5 col-4">
-            <div class="card">
-                <div class="card-body row">
-                    <a class="text-center card-link" href="{% url 'download_data_cube' data_cube.filename %}">
-                        <button class="btn btn-primary"><i class="bi bi-download"></i> Download FITS data cube</button>
-                    </a>
-                    <span class="text-center">{{ data_cube.size|filesizeformat }}</span>
-                </div>
-            </div>
+
+
         </div>
     </div>
 
     <div class="container">
-        <h3>Metadata</h3>
-    <table class="table table-hover col-lg-8" style="table-layout: fixed">
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingOne">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                  All FITS Metadata
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+              <table class="table table-hover col-lg-8" style="table-layout: fixed">
         <thead class="thead-light">
         <tr>
             <th scope="col">Keyword</th>
@@ -55,8 +107,12 @@
     {% else %}
         <p>Specified metadata not found.</p>
     {% endif %}
-    </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
+    </div>
 </div>
 
 {% endblock %}
