Some small DB optimizations

--- a/frontend/templates/frontend/data_cube_detail.html
+++ b/frontend/templates/frontend/data_cube_detail.html
@@ -30,6 +30,8 @@
                     <td>
                         {% for tag in data_cube.tags.all %}
                         <span class="badge bg-info">{{ tag }}</span>
+                        {% empty %}
+                        -
                         {% endfor %}
                     </td>
                 </tr>
