Add feedback email link and add documentation

--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -44,6 +44,7 @@
         <div id="sidebar" class="col-3 bg-light p-3">
             {% block sidebar %}
             {% include "frontend/search_sidebar.html" %}
+            {% include "frontend/feedback_sidebar.html" %}
             {% endblock %}
         </div>
 
