--- a/frontend/templates/frontend/search_sidebar.html
+++ b/frontend/templates/frontend/search_sidebar.html
@@ -1,4 +1,4 @@
-<div class="search-sidebar row">
+<div class="search-sidebar row mb-5">
     <h4>Search</h4>
 
     <form action="{% url 'search' %}" method="GET">
@@ -6,7 +6,7 @@
         <table>
             {{ search_form.as_table }}
         </table>
-        <div class="text-right">
+        <div class="text-end">
             <button type="submit" class="btn btn-secondary mt-3"><i class="bi bi-search "></i> Search</button>
         </div>
     </form>
