--- a/frontend/templates/frontend/column_value.html
+++ b/frontend/templates/frontend/column_value.html
@@ -1,5 +1,5 @@
 {% if array_value %}
-<ul style="list-style-type: none; padding-left: 0">
+<ul class="list-unstyled">
     {% for value in array_value %}
     <li>{{ value }}</li>
     {% endfor %}
