--- a/frontend/templates/frontend/widgets/dropdown_checkbox_select.html
+++ b/frontend/templates/frontend/widgets/dropdown_checkbox_select.html
@@ -1,10 +1,10 @@
 {% with id=widget.attrs.id %}
 <div class="dropdown">
-  <button type="button" class="text-start form-select" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
+  <button type="button" class="text-start form-select" id="dropdown-button-{{ id }}" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
     Select {{full_field_name}}
   </button>
 
-  <div {% if id %}id="{{ id }}"{% endif %} class="{% if widget.attrs.class %}{{ widget.attrs.class }}{% endif %} dropdown-menu" aria-labelledby="dropdownMenuButton">
+  <div {% if id %}id="{{ id }}"{% endif %} class="{% if widget.attrs.class %}{{ widget.attrs.class }}{% endif %} dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
     {% for group, options, index in widget.optgroups %}
       {% if group %}
         <div class="form-group">{{ group }}<div {% if id %}id="{{ id }}_{{ index }}"{% endif %}>
